# template_observer

./: CMakeLists.txt
lib/: CMakeLists.txt  Observable.h  Observer.h
template_observer/: Makefile  Observable.h  cmake_install.cmake  template_observer.h
test/: CMakeLists.txt  main.cpp  test_template_observer  test_template_observer.hpp
